# graph_process_visualization

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
app/: CMakeLists.txt  main.cpp
cmake/: config.cmake
include/: mainwindow.h
src/: mainwindow.cpp
